Adding functionality related to Dealer commands, primarily Hand Setup. Also miscellaneous segregation of responsibility

--- a/client/css/onlinePoker.css
+++ b/client/css/onlinePoker.css
@@ -86,3 +86,11 @@
     color: yellow;
     font-weight: bold;
 }
+
+.btn-margin {
+    margin-bottom: 2px;
+}
+
+.row-padding {
+    padding-bottom: 4px;
+}
